--- a/styles/style.css
+++ b/styles/style.css
@@ -1,56 +1,124 @@
-.contenedor{
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
+:root{
+    /*colores*/
+    --color-primario: #0A3871; /*dark-blue*/
+    --color-secundario: #343A40; /*black*/
+    --color-terciario: #E5E5E5; /*white-clear-blue*/
+    --color-cuaternario: #FFFFFF; /*white*/
+    --color-quiniario: #D8DFE8; /*hover-color*/
+
+    /*font*/
+    --font-inter: 'Inter', sans-serif;
 }
 
-.contenedor__encriptador{
-
+* {
+    padding: 0;
+    margin: 0;
+    background-color: var(--color-terciario);
+    font-family: var(--font-inter);
+    font-weight: 400;
+    line-height: 150%;
 }
 
-.texto {
-
+.logo__alura{
+    padding-top: 10px;
+    margin-left: 50px;
+    width: 1%;
 }
 
-.contenedor__reglas {
 
+main {
+    display: flex;
+    margin-bottom: 50px;
+    margin-left: 100px;
 }
 
-.contenedor__botones {
+.texto__encriptador {
+    margin-top: 60px;
+    font-size: 32px;
+    color: var(--color-primario);
+    text-transform: lowercase;
+    border: none;
+}
 
+.texto__encriptador::placeholder{color: var(--color-primario);}
+    .texto__encriptador:focus {
+        outline: none;
+}
+
+.mensaje__encriptado {
+    background-color: var(--color-cuaternario);
+    background-image: url(/assets/muñeco.png);
+    background-repeat: no-repeat;
+    border: none;
+    border-radius: 24px;
+    font-size: 32px;
+    color: var(--color-primario);
+    margin-left: 100px;
+    margin-top: 20px;
+    position: fixed;
+}
+
+.mensaje__encriptado:focus {
+    outline: none;
+}
+
+.botones {
+    display:flex;
+    margin-top: 18px;
+    padding: 1% 0;
 }
 
 .boton__encriptar{
-
+    background-color: var(--color-primario);
+    border: 1px solid var(--color-primario);
+    border-radius: 24px;
+    font-size: 16px;
+    color: var(--color-cuaternario);
+    cursor: pointer;
+    height: 67px;
+    width: 328px;
 }
 
 .boton__desencriptar{
-
+    background-color: var(--color-quiniario);
+    border: 1px solid var(--color-primario);
+    border-radius: 24px;
+    font-size: 16px;
+    color: var(--color-primario);   
+    height: 67px;
+    margin-left: 30px;
+    width: 326px;
 }
 
-.contenedor__texto-encriptado{
-
+.boton__copiar-mensaje {
+    border: 1px solid var(--color-primario);
+    border-radius: 24px;
+    font-size: 16px;
+    color: var(--color-primario);
+    cursor: pointer;
+    height: 67px;
+    margin-left: 108px;
+    margin-top: 402px;
+    position: absolute;
+    width: 336px;
 }
 
-
-.contenedor__texto-encriptado__mensaje{
-
-}
-
-.titulo-mensaje{
-    
-}
-
-.parrafo-mensaje {
-
-}
-
-.mensaje {
-
-}
-
-.boton__copiar-mensaje-encripado{
-
+.reglas {
+    display:flex;
+    align-items: center;
+    flex-direction: row;
+    gap: 8px;
+    font-size: 12px;
+    color: var(--color-secundario);
 }
 
 .footer {
-
+    padding: 1% 0% 1% 8%;
+    top: 96%;
+    display: flex;
+    justify-content: center;
+    background-color: #0A3871;
+    font-size: 14px;
 }
