Ajustes HTML, CSS, JS + Responsividad

--- a/styles/style.css
+++ b/styles/style.css
@@ -15,29 +15,45 @@
 * {
     padding: 0;
     margin: 0;
-    background-color: var(--color-terciario);
     font-family: var(--font-inter);
     font-weight: 400;
     line-height: 150%;
 }
 
-.logo__alura{
-    padding-top: 10px;
-    margin-left: 50px;
-    width: 1%;
+body{
+    display: flex;
+    flex-direction: column;
+    background-color: var(--color-terciario);
+    min-height: 100vh;
+    margin-top: 40px;
 }
 
+.logo__alura{
+    padding: 0 5%;
+    margin-top: 2%;
+}
 
 main {
     display: flex;
-    margin-bottom: 50px;
-    margin-left: 100px;
+    gap: 150px;
+    justify-content: center;
+}
+
+.entrada-encriptador{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    max-width: 650px;
+    gap: 16px;
 }
 
 .texto__encriptador {
+    width: 100%;
+    height: 500px;
     margin-top: 60px;
     font-size: 32px;
     color: var(--color-primario);
+    background-color: transparent;
     text-transform: lowercase;
     border: none;
 }
@@ -47,27 +63,10 @@ main {
         outline: none;
 }
 
-.mensaje__encriptador {
-    background-color: var(--color-cuaternario);
-    background-image: url(/assets/muñeco.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
-    border: none;
-    border-radius: 24px;
-    font-size: 32px;
-    color: var(--color-primario);
-    padding-left: 20px;
-}
-
-.mensaje__encriptador:focus {
-    outline: none;
-}
-
 .botones {
     display:flex;
-    margin-top: 18px;
-    padding: 1% 0;
+    gap: 24px;
+    width: 100%;
 }
 
 .boton__encriptar{
@@ -78,7 +77,8 @@ main {
     color: var(--color-cuaternario);
     cursor: pointer;
     height: 67px;
-    width: 328px;
+    max-width: 326px;
+    width: 100%;
 }
 
 .boton__desencriptar{
@@ -88,17 +88,52 @@ main {
     font-size: 16px;
     color: var(--color-primario);   
     height: 67px;
-    margin-left: 30px;
-    width: 326px;
+    max-width: 326px;
+    width: 100%;
 }
 
 .mensaje{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 100px;
+    width: 400px;
     background-color: var(--color-cuaternario);
     border-radius: 24px;
+    padding: 32px;
+    height: 650px;
+}
+
+.mensaje__de-encriptado {
+    flex-direction: column;
+    align-items: center;
+    display: none;
+    height: 100%;
+}
+
+.mensaje__anuncio {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    gap: 10px;
+    font-size: 16px;
+    font-weight: normal;
+}
+
+.mensaje__anuncio p:first-of-type{
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.mensaje__encriptador {
+    height: 80%;
+    border: none;
+    font-size: 32px;
+    color: var(--color-primario);
+}
+
+.mensaje__encriptador:focus {
+    outline: none;
 }
 
 .boton__copiar-mensaje {
@@ -106,9 +141,9 @@ main {
     border-radius: 24px;
     font-size: 16px;
     color: var(--color-primario);
+    margin-top: auto;
     cursor: pointer;
     height: 67px;
-    margin-left: 108px;
     width: 200px;
 }
 
@@ -120,13 +155,41 @@ main {
     font-size: 12px;
     color: var(--color-secundario);
 }
-/*
+
 .footer {
-    padding: 1% 0% 1% 8%;
-    top: 96%;
+    padding: 20px 0;
+    width: 100%;
+    margin-top: auto;
     display: flex;
     justify-content: center;
     background-color: var(--color-primario);
     font-size: 14px;
+    color: var(--color-terciario);
 }
-*/
+
+@media (width <=1350px) {
+    main {
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        gap: 30px;
+    }
+    .header {
+        width: 100%;
+    }
+
+    .entrada-encriptador {
+        width: 100%;
+    }
+
+    .mensaje {
+        height: auto;
+        margin-bottom: 24px;
+    }
+}
+
+@media (width <=715px) {
+    main {
+        padding: 0 24px;
+    }
+}
